<resources>
    <string name="app_name">Sult Store</string>
    <string name="tm_text">TM</string>

    <string name="login_text">Нет аккаунта? Регистрация</string>
    <string name="register_text">Уже есть аккаунт? Войти</string>
    <string name="email_text">Электронный адрес</string>
    <string name="password_text">Пароль</string>
    <string name="product_img">Картинка товара</string>
    <string name="product_price">0₽</string>
    <string name="product_title">Название товара</string>
    <string name="product_page_desc">Компьютер для ежедневных задач, серфинга в интернете, офисного или домашнего пользования, СММ и некоторых других специальностей. Достаточная производительность и быстрая отклик данного компьютера только облегчат вам работу и приукрасят досуг</string>
    <string name="login">Логин</string>
    <string name="register">Регистрация</string>
    <string name="navigation_rect">table</string>
    <string name="main">Главная</string>
    <string name="catalog">Каталог</string>
    <string name="news">Новости и новинки</string>
    <string name="profile">Профиль</string>
    <string name="search">Поиск</string>
    <string name="news_title">АКЦИЯ 1+1=3 ДО КОНЦА МАЯ!</string>
    <string name="news_desc">Скидки до -50%\n\nна все компьютеры\n\nSULT STORE</string>
    <string name="news_page_desc">Скидки до -25% на все компьютеры\n\nИгровые               -10%\n\nОфиссные               -25%\n\nРабочие                       -20%</string>
    <string name="news_img">Картинка новости</string>
    <string name="news_text">Компью́тер — функциональное устройство, способное выполнять значительный объём вычислений, включая многочисленные арифметические и логические операции, без вмешательства человека. Компьютер может быть как отдельным блоком, так и состоить из нескольких взаимосвязанных устройств. Является синонимом терминов «электронная вычислительная машина», «вычислительная система».</string>
    <string name="profile_rect">Вставка профиля</string>
    <string name="profile_avatar_circle">Фото профиля</string>
    <string name="profile_support_rect">Вставка поддержки профиля</string>
    <string name="profile_settings_rect">Вставка настроек профиля</string>
    <string name="profile_settings">Настройки профиля</string>
    <string name="profile_support">Поддержка профиля</string>
    <string name="profile_name">Пользователь_1</string>
    <string name="profile_name_hint">Имя</string>
    <string name="profile_nickname">#user</string>
    <string name="profile_cart">Корзина</string>
    <string name="profile_favourite">Избранные</string>
    <string name="profile_cart_rect">Вставка корзина</string>
    <string name="product_page_title">Preview</string>
    <string name="profile_favourite_rect">Вставка избранное</string>
    <string name="product_page_image">Изображение товара</string>
    <string name="spec">Характеристики</string>
    <string name="desc">Описание</string>
    <string name="look_text">Смотреть</string>
    <string name="look">Кнопка смотреть</string>
    <string name="filter_title">Игровые</string>
    <string name="filter_button">Фильтр</string>
    <string name="add_to_favourite">Добавить в избранное</string>
    <string name="addToCart_text">Добавить в корзину</string>
    <string name="product_page_spec">Категория: Компьютеры\n\nТип товара: Настольный компьютер\n\nВид товара: Игровой компьютер\n\nКласс: simple\n\nОсновной цвет: черный\n\nПодсветка: нет</string>
    <string name="filter_reset">Сбросить</string>
    <string name="filter_text">Фильтры</string>
    <string name="filter_category_text">Все категории</string>
    <string name="filter_price_text">Цена</string>
    <string name="filter_text_apply">Применить</string>
    <string name="price_text_from">От</string>
    <string name="price_text_to">До</string>
    <string name="filter_comp_text">Компьютеры</string>
    <string name="filter_game_text">Приставки</string>
    <string name="filter_note_text">Ноутбуки</string>
    <string name="back">Назад</string>
    <string name="filter_comp_rect">Фильтр Компьютеры</string>
    <string name="filter_note_rect">Фильтр Ноутбуки</string>
    <string name="filter_game_rect">Фильтр Приставки</string>
    <string name="price_rect_from">Цена до</string>
    <string name="price_rect_to">Цена от</string>
    <string name="filters">Сортировка</string>
    <string name="cart">Корзина</string>
    <string name="favourites">Избранное</string>
    <string name="addToCart">Добавить в корзину</string>
</resources>