<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/back"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewsPageActivity">

    <ImageView
        android:id="@+id/newsImage"
        android:layout_width="wrap_content"
        android:layout_height="275dp"
        android:contentDescription="@string/news_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/preview" />

    <TextView
        android:id="@+id/newsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/news_title"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newsImage" />

    <TextView
        android:id="@+id/newsDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/news_page_desc"
        android:textColor="@color/front"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newsTitle" />

    <TextView
        android:id="@+id/newsText"
        android:layout_width="390dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/news_text"
        android:textColor="@color/front"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newsDesc" />

    <ImageView
        android:id="@+id/look"
        android:layout_width="164dp"
        android:layout_height="51dp"
        android:contentDescription="@string/look"
        android:onClick="goLook"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newsText"
        app:srcCompat="@drawable/filter_g" />

    <TextView
        android:id="@+id/look_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/look_text"
        android:textColor="@color/back"
        android:textSize="20sp"
        android:fontFamily="@font/montserrat_bold"
        android:onClick="goLook"
        app:layout_constraintBottom_toBottomOf="@+id/look"
        app:layout_constraintEnd_toEndOf="@+id/look"
        app:layout_constraintStart_toStartOf="@+id/look"
        app:layout_constraintTop_toTopOf="@+id/look" />

</androidx.constraintlayout.widget.ConstraintLayout>