<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/back"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FilterActivity">

    <ImageView
        android:id="@+id/back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/back"
        android:onClick="goBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/close" />

    <TextView
        android:id="@+id/filter_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/filter_text"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/filter_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/filter_reset"
        android:textColor="@color/light_red"
        android:textSize="17sp"
        android:onClick="reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/category_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="85dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/filter_category_text"
        android:textColor="@color/front"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardComp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:onClick="onComp"
        app:cardBackgroundColor="@color/front"
        app:cardCornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category_text">

        <TextView
            android:id="@+id/filter_comp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/filter_comp_text"
            android:textColor="@color/back"
            android:textSize="15sp"
            android:onClick="onComp"
            app:layout_constraintBottom_toBottomOf="@+id/filter_comp"
            app:layout_constraintEnd_toEndOf="@+id/filter_comp"
            app:layout_constraintStart_toStartOf="@+id/filter_comp"
            app:layout_constraintTop_toTopOf="@+id/filter_comp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:onClick="onNote"
        app:cardBackgroundColor="@color/front"
        app:cardCornerRadius="10dp"
        app:layout_constraintStart_toEndOf="@+id/cardComp"
        app:layout_constraintTop_toBottomOf="@+id/category_text">

        <TextView
            android:id="@+id/filter_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/filter_note_text"
            android:textColor="@color/back"
            android:textSize="15sp"
            android:onClick="onNote"
            tools:layout_editor_absoluteX="171dp"
            tools:layout_editor_absoluteY="136dp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:onClick="onGame"
        app:cardBackgroundColor="@color/front"
        app:cardCornerRadius="10dp"
        app:layout_constraintStart_toEndOf="@+id/cardNote"
        app:layout_constraintTop_toBottomOf="@+id/category_text">

        <TextView
            android:id="@+id/filter_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/filter_game_text"
            android:textColor="@color/back"
            android:textSize="15sp"
            android:onClick="onGame"
            tools:layout_editor_absoluteX="100dp"
            tools:layout_editor_absoluteY="207dp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/price_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="45dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/filter_price_text"
        android:textColor="@color/front"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardComp" />

    <ImageView
        android:id="@+id/price_rect_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/price_rect_from"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price_text"
        app:srcCompat="@drawable/price_rect" />

    <EditText
        android:id="@+id/price_text_from"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_marginStart="10dp"
        android:autofillHints="name"
        android:background="@null"
        android:ems="10"
        android:fontFamily="@font/montserrat_bold"
        android:hint="@string/price_text_from"
        android:inputType="number"
        android:textColorHint="@color/back"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/price_rect_from"
        app:layout_constraintStart_toStartOf="@+id/price_rect_from"
        app:layout_constraintTop_toTopOf="@+id/price_rect_from"
        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/price_rect_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/price_rect_to"
        app:layout_constraintStart_toEndOf="@+id/price_rect_from"
        app:layout_constraintTop_toBottomOf="@+id/price_text"
        app:srcCompat="@drawable/price_rect" />

    <EditText
        android:id="@+id/price_text_to"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_marginStart="10dp"
        android:autofillHints="name"
        android:background="@null"
        android:ems="10"
        android:fontFamily="@font/montserrat_bold"
        android:hint="@string/price_text_to"
        android:inputType="number"
        android:textColorHint="@color/back"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/price_rect_to"
        app:layout_constraintStart_toStartOf="@+id/price_rect_to"
        app:layout_constraintTop_toTopOf="@+id/price_rect_to"
        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/filter_accept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/filter_text_apply"
        android:textColor="@color/light_blue"
        android:textSize="17sp"
        android:onClick="goAccept"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>