<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    tools:context=".NewsActivity">

    <ImageView
        android:id="@+id/navigation_rect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/navigation_rect"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/navigation_rect" />

    <ImageView
        android:id="@+id/main"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/main"
        android:onClick="goMain"
        app:layout_constraintBottom_toBottomOf="@+id/navigation_rect"
        app:layout_constraintEnd_toStartOf="@+id/news"
        app:layout_constraintStart_toStartOf="@+id/navigation_rect"
        app:layout_constraintTop_toTopOf="@+id/navigation_rect"
        app:srcCompat="@drawable/main" />

    <ImageView
        android:id="@+id/profile"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/profile"
        android:onClick="goProfile"
        app:layout_constraintBottom_toBottomOf="@+id/navigation_rect"
        app:layout_constraintEnd_toEndOf="@+id/navigation_rect"
        app:layout_constraintStart_toEndOf="@+id/news"
        app:layout_constraintTop_toTopOf="@+id/navigation_rect"
        app:srcCompat="@drawable/profile" />

    <ImageView
        android:id="@+id/news"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/catalog"
        app:layout_constraintBottom_toBottomOf="@+id/navigation_rect"
        app:layout_constraintEnd_toEndOf="@+id/navigation_rect"
        app:layout_constraintStart_toStartOf="@+id/navigation_rect"
        app:layout_constraintTop_toTopOf="@+id/navigation_rect"
        app:layout_constraintVertical_bias="0.6"
        app:srcCompat="@drawable/news" />

    <TextView
        android:id="@+id/top_text"
        android:layout_width="220dp"
        android:layout_height="30dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:text="@string/news"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/newsRecycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        tools:listitem="@layout/new_item"
        app:layout_constraintBottom_toTopOf="@+id/navigation_rect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_text" />
</androidx.constraintlayout.widget.ConstraintLayout>